# dodona

./: .gitignore  .gitmodules  Cargo.toml  DEPLOYMENT.md  README.md  codecov.yml  config.toml  docker-compose.yml  package-lock.json  package.json  test_curl.txt
.github/: CODEOWNERS
.github/workflows/: cargo-check.yml  cargo-fmt.yml  cargo-test.yml  coverage.yml
api-server/: .env  Cargo.toml  Dockerfile  env
api-server/src/: config.rs  crypto.rs  lib.rs  main.rs  utils.rs
api-server/src/core/: auth.rs  mod.rs  tests.rs
api-server/src/models/: dataset_details.rs  datasets.rs  mod.rs  model.rs  projects.rs  users.rs
api-server/src/routes/: clients.rs  jobs.rs  mod.rs  projects.rs  users.rs
api-server/tests/: api.rs  common.rs  config.rs  crypto.rs  projects.rs  users.rs
api_server/: .Rocket.toml  Cargo.toml  README.md  env
api_server/src/: lib.rs  main.rs  mongo_connection.rs
api_server/src/models/: mod.rs  model.rs  users.rs
api_server/src/routes/: mod.rs  users.rs
api_server/templates/: base.html.tera  index.html.tera
backend/: Cargo.toml  README.md
backend/analytics/: Cargo.toml  README.md
backend/analytics/src/: lib.rs  main.rs
backend/analytics/src/dataset_analysis/: mod.rs  tests.rs
backend/api-server/: Cargo.toml  Dockerfile  README.md  jwt_key
backend/api-server/src/: dodona_error.rs  error.rs  lib.rs  main.rs
backend/api-server/src/auth/: mod.rs  tests.rs
backend/api-server/src/routes/: clients.rs  mod.rs  payloads.rs  projects.rs  users.rs  websockets.rs
backend/api-server/tests/: clients.rs  common.rs  projects.rs  users.rs
backend/api-server/tests/assets/: asl.csv  base64_avatar.txt  dasl.csv  only_predict_dataset.csv  only_train_dataset.csv
backend/config/: Cargo.toml  README.md
backend/config/src/: lib.rs
backend/config/tests/: config.rs
backend/crypto/: Cargo.toml  README.md
backend/crypto/src/: lib.rs
backend/crypto/tests/: crypto.rs
backend/dcl/: Cargo.toml  README.md
backend/dcl/src/: control.rs  lib.rs  main.rs  messages.rs
backend/dcl/src/auth_end/: mod.rs
backend/dcl/src/health/: mod.rs  tests.rs
backend/dcl/src/interface_end/: mod.rs
backend/dcl/src/job_end/: finance.rs  ml.rs  mod.rs
backend/dcl/src/job_end/queue/: mod.rs  tests.rs
backend/dcl/src/node_end/: mod.rs  protocol.rs
backend/dcl/src/node_end/protocol/: tests.rs
backend/dcl/src/protocol/: mod.rs  tests.rs
backend/dcl/tests/: common.rs  comp_nodes.rs  interface.rs  job.rs  nodes.rs
backend/interface/: Cargo.toml
backend/interface/src/: main.rs
backend/messages/: Cargo.toml  README.md
backend/messages/src/: client.rs  control.rs  interface.rs  kafka_message.rs  length_prefix.rs  lib.rs  raw_message.rs  websocket_message.rs
backend/models/: Cargo.toml  README.md
backend/models/src/: clients.rs  dataset_analysis.rs  dataset_details.rs  datasets.rs  gridfs.rs  job_performance.rs  jobs.rs  lib.rs  models.rs  predictions.rs  projects.rs  users.rs
backend/models/tests/: common.rs  delete_items.rs
backend/utils/: Cargo.toml  README.md
backend/utils/src/: analysis.rs  anon.rs  compress.rs  finance.rs  lib.rs
backend/utils/tests/: anon.rs  common.rs  compress.rs
dcl/: Cargo.toml
dcl/src/: config.rs  lib.rs  main.rs
dcl/src/frontend/: mod.rs
dcl/src/interface_end/: mod.rs
dcl/src/job_end/: mod.rs
dcl/src/models/: datasets.rs  mod.rs
dcl/src/node_end/: mod.rs
dcl/tests/: common.rs
guides/: become_a_client.md  getting_started.md  how_sybl_works.md  introduction_to_machine_learning.md  register_a_model.md
interface/: Cargo.toml
interface/src/: main.rs
src/: main.rs
web/: Dockerfile  README.md  package-lock.json  package.json  vue.config.js
web/public/: index.html  login.html  manifest.json
web/src/: App.js  App.tsx  App.vue  Auth.js  Navbar.js  index.css  index.js  main.js  setupProxy.js
web/src/assets/css/: PaginationTableStyle.js  custom.scss  theme-colors.scss
web/src/assets/icons/: Logo.js  LogoImage.js  Placeholder.js
web/src/components/: APIPaginationTable.vue  AddProject.vue  AvatarUpload.vue  Buttons.js  Cards.js  ClearNavbar.js  DashNavbar.js  Dashboard.js  DataTable.vue  FieldsDef.js  FileUpload.vue  Globalstyle.js  Header.vue  IconBase.vue  Login.js  ModelCard.vue  ModelPerformance.vue  MyVueTable.vue  Navbar.js  NavigatableTab.vue  PaginationTable.vue  ProjectAnalysis.vue  ProjectDescription.js  ProjectInput.vue  ProjectOutput.vue  ProjectOverview.vue  ProjectSettings.vue  ProjectView.vue  Register.js  Themes.js  Toggler.js  Upload.js  UploadFiles.vue  VuetableCssBootstrap4.js  Welcome.js  bootstrap-css.js  useDarkMode.js
web/src/components/charts/: BarChart.vue  DataAnalyticsBar.vue  LineChart.vue  NumericalDataAnalyticsBar.vue  PerformanceChart.vue  Speedometer.vue
web/src/components/headers/: Dashboard.vue  Main.vue
web/src/components/icons/: IconLogo.vue  LandingImage.vue  PlaceHolder.vue  box-1.vue  cloud-1.vue  drop.vue  terminal.vue  waves.vue
web/src/icons/: Coder.js  Logo.js  LogoImage.js  Placeholder.js
web/src/patterns/: background.js
web/src/router/: index.js
web/src/services/: UploadFilesService.js  axios-instance.js
web/src/store/: index.js
web/src/store/modules/: models.js  projects.js  socket.js  users.js
web/src/views/: ClientDashboard.vue  Confirm.vue  Dashboard.vue  Guides.vue  KeyConfirmation.vue  Login.vue  Models.vue  Nodes.vue  Pricing.vue  Register.vue  Settings.vue  Welcome.vue
