[package]
name = "dodona"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dodona"
path = "src/lib.rs"

[dependencies]

tide = "0.13.0"
async-std = { version = "1.6.2", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-types = "2.4.0"
bson = "1.1.0"
futures = "0.3.5"
anyhow = "1.0.32"
async-trait = "0.1.38"
dotenv = "0.15.0"
rand = "0.7.3"
ring = "0.16.15"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]