[package]
name = "dodona"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dodona"
path = "src/lib.rs"

[dependencies]
tide = "0.13.0"
async-std = { version = "1.6.2", features = ["attributes"] }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ammonia = "3.1.0"
pbkdf2 = "0.5.0"
log = "0.4"
toml = "0.5.7"
chrono = "0.4"
bzip2 = "0.4.1"
csv = "1.1.3"
rand = "0.7.3"
rsa = { git = "https://github.com/RustCrypto/RSA", features = ["pem"] }

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]
