[package]
name = "dodona"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_contrib = {version = "0.4.5", features = ["tera_templates"]}
rocket_cors = "0.5.1"
mongodb = "1.1.0-beta"
r2d2 = "0.8.3"
r2d2-mongodb = "*"