[package]
name = "dodona"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.13.0"
anyhow = "1.0"
mongodb = "1.0.0"
wither = "0.9.0-alpha.1"
http-types = "2.4.0"