[package]
name = "dcl"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
tokio-test = "0.2.1"
tokio-util = { version = "0.3.1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.5"
http = "0.2.1"
httparse = "1.3.4"