[package]
name = "analytics"
version = "0.1.0"
authors = ["Nathan Hall <hallnath42@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.8.4", features = ["full"] }
tokio-stream = "0.1.5"
log = "0.4.14"
rdkafka = { version = "0.26.0", features = ["cmake-build"] }
mongodb = "2.0.0-alpha"
anyhow = "1.0.39"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
csv = "1.1.6"
config = { path = "../config" }
utils = { path = "../utils" }
models = { path = "../models" }
crypto = { path = "../crypto" }
