[package]
name = "api-server"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.1"
actix-web = "4.0.0-beta.1"
actix-rt = "2.0.0-beta.2"
actix-cors = { git = "https://github.com/andy128k/actix-extras", rev = "d7ac647"}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbkdf2 = "0.5.0"
env_logger = "0.7"
log = "0.4"
toml = "0.5.7"
bzip2 = "0.4.1"
csv = "1.1.3"
thiserror = "1.0.23"
chrono = "0.4"
base64 = "0.13.0"
config = { path = "../config" }
messages = { path = "../messages" }
crypto = { path = "../crypto" }
models = { path = "../models" }
utils = { path = "../utils" }
mongodb = { git = "https://github.com/glebpom/mongo-rust-driver", branch = "tokio-1.0-fiix" }
