[package]
name = "api-server"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
actix-rt = "2.1.0"
actix-cors = { git = "https://github.com/actix/actix-extras", branch = "master" }
anyhow = "1.0.39"
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = "0.1.5"
rdkafka = { version = "0.26.0", features = ["cmake-build"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
pbkdf2 = "0.7.4"
toml = "0.5.8"
bzip2 = "0.4.2"
csv = "1.1.6"
thiserror = "1.0.24"
chrono = "0.4.19"
base64 = "0.13.0"
config = { path = "../config" }
crypto = { path = "../crypto" }
models = { path = "../models" }
utils = { path = "../utils" }
mongodb = "2.0.0-alpha"
futures-util = "0.3.13"
jsonwebtoken = "7.2.0"
