[package]
name = "config"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
toml = "0.5.8"

[dependencies.serde]
version = "1.0.124"
features = ["derive"]
