[package]
name = "crypto"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.1.1"
base64 = "0.13.0"
html-escape = "0.2.6"
openssl = "0.10.32"
rand = "0.8.3"
serde_json = "1.0.64"
