[package]
name = "crypto"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.1.1"
html-escape = "0.2.7"
openssl = "0.10.33"
rand = "0.8.3"
serde_json = "1.0.64"
