[package]
name = "dcl"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }
futures = "0.3.5"
http = "0.2.1"
httparse = "1.3.4"
anyhow = "1.0"
bzip2 = "0.4.1"
csv = "1.1.3"
toml = "0.5.7"
config = { path = "../config" }
models = { path = "../models" }
utils = { path = "../utils" }
messages = { path = "../messages" }
crypto = { path = "../crypto" }
chrono = "0.4.19"
mongodb = "2.0.0-alpha"

[dev-dependencies]
chrono = "0.4"
float-cmp = "0.8.0"
mockito = "0.28.0"
pbkdf2 = "0.5.0"

[dependencies.reqwest]
version = "0.11"
features = ["json"]
