[package]
name = "dcl"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.3", features = ["alloc"] }
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = "0.1.5"
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rdkafka = { version = "0.26.0", features = ["cmake-build"] }
futures = "0.3.13"
http = "0.2.3"
httparse = "1.3.5"
anyhow = "1.0.39"
bzip2 = "0.4.2"
csv = "1.1.6"
toml = "0.5.8"
config = { path = "../config" }
models = { path = "../models" }
utils = { path = "../utils" }
messages = { path = "../messages" }
crypto = { path = "../crypto" }
chrono = "0.4.19"
mongodb = "2.0.0-alpha"

[dev-dependencies]
chrono = "0.4.19"
float-cmp = "0.8.0"
mockito = "0.30.0"

[dependencies.reqwest]
version = "0.11.2"
features = ["json"]
