[package]
name = "interface"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
log = "0.4.11"
config = { path = "../config" }
models = { path = "../models" }
utils = { path = "../utils" }
messages = { path = "../messages" }
mongodb = { git = "https://github.com/alexander-jackson/mongo-rust-driver" }
tokio-stream = "0.1.1"
anyhow = "1.0.37"

[dependencies.tokio]
version = "1"
features = ["full"]
