[package]
name = "interface"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
log = "0.4.11"
config = { path = "../config" }
models = { path = "../models" }
utils = { path = "../utils" }

[dependencies.async-std]
version = "1.8.0"
features = ["unstable"]

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std"]
