[package]
name = "messages"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
models = { path = "../models" }
utils = { path = "../utils" }
mongodb = "2.0.0-alpha"
async-trait = "0.1.48"
