[package]
name = "messages"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
tokio = { version = "1.4.0", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
rdkafka = { version = "0.25", features = ["cmake-build"] }
models = { path = "../models" }
utils = { path = "../utils" }
mongodb = "2.0.0-alpha"
async-trait = "0.1.48"
chrono = "0.4.19"
base64 = "0.13.0"
