[package]
name = "models"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.38"
tokio-stream = "0.1.3"
utils = { path = "../utils" }
config = { path = "../config" }
crypto = { path = "../crypto" }
mongodb = "2.0.0-alpha"
bytes = "1.0.1"

[dev-dependencies]
tokio = { version = "1.2.0", features = ["sync"] }

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
