[package]
name = "models"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-stream = "0.1"
utils = { path = "../utils" }
config = { path = "../config" }
crypto = { path = "../crypto" }
mongodb = "2.0.0-alpha"

[dev-dependencies]
tokio = { version = "1", features = ["sync"] }

[dependencies.chrono]
version = "0.4"
features = ["serde"]
