[package]
name = "models"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.39"
tokio-stream = "0.1.5"
utils = { path = "../utils" }
crypto = { path = "../crypto" }
config = { path = "../config" }
mongodb = "2.0.0-alpha"
bytes = "1.0.1"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["sync", "parking_lot" ] }

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
