[package]
name = "utils"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.4"
crypto = { path = "../crypto" }
log = "0.4.11"
bzip2 = "0.4.1"
anyhow = "1.0"
pbkdf2 = "0.5.0"
chrono = "0.4.19"
thiserror = "1.0.23"

[dependencies.fern]
version = "0.5"
features = ["colored"]

[dependencies.serde]
version = "1"
features = ["derive"]
