[package]
name = "utils"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
crypto = { path = "../crypto" }
log = "0.4.14"
bzip2 = "0.4.4"
anyhow = "1.0.38"
pbkdf2 = "0.7.3"
chrono = "0.4.19"
thiserror = "1.0.24"
rand = "0.8.3"
mongodb = "2.0.0-alpha"

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]
